--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,24 +24,27 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace = "com.example.statussaver"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion =  "25.1.8937393"
+    namespace = "com.status.saver"
+    compileSdk = 34
+    ndkVersion = "25.1.8937393"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.statussaver"
+        applicationId = "com.status.saver"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdk = 21
-        targetSdk = 33
-        versionCode = flutterVersionCode.toInteger()
+        targetSdk = 34
+        versionCode = flutterVersionCode.toInteger()  
         versionName = flutterVersionName
+        multiDexEnabled true
+
     }
 
     buildTypes {
@@ -55,4 +58,9 @@ android {
 
 flutter {
     source = "../.."
+}
+
+
+dependencies {
+  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
