--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
         <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
-        <!-- Provide required visibility configuration for API level 30 and above -->
+        <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+        <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+        <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+        <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+        <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 <queries>
   <!-- If your app checks for SMS support -->
   <intent>
@@ -17,13 +25,25 @@
     <action android:name="android.support.customtabs.action.CustomTabsService" />
   </intent>
 </queries>
+
+
     <application
       
-        android:label="statussaver"
-        android:name="${applicationName}"
+        android:label="status Saver"
+        android:name="${applicationName}" 
+        android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher">
+        <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
+<receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
+    <intent-filter>
+        <action android:name="android.intent.action.BOOT_COMPLETED"/>
+        <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
+        <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+        <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
+    </intent-filter>
+</receiver>
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.statussaver.MainActivity" 
             android:exported="true"
             android:launchMode="singleTop"
             android:taskAffinity=""
